Update README with new neon visual presets and taskbar preview button details